# drum-pad-app

./: .gitignore  .gradleignore  App.js  App.tsx  README.md  app.json  babel.config.js  index.js  metro.config.js  package-lock.json  package.json  react-native.config.js
android/: build.gradle  gradle.properties  link-assets-manifest.json  settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/sounds/metronome/: index.ts
android/app/src/main/java/com/drumpadapp/: MainActivity.kt  MainApplication.kt
android/app/src/main/java/com/shapebeats/: MainActivity.kt  MainApplication.kt
android/app/src/main/java/com/shapebeats/audio/: AudioAssetLoaderModule.kt  AudioAssetLoaderPackage.kt
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
android/app/src/main/res/drawable/: rn_edit_text_material.xml  splash_screen.xml
android/app/src/main/res/values/: dimens.xml  strings.xml  styles.xml
docs/: ANDROID_RELEASE_AUDIO_TESTING.md
ios/: Podfile  link-assets-manifest.json
ios/DrumPadApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/DrumPadApp.xcodeproj/: project.pbxproj
ios/DrumPadApp.xcworkspace/: contents.xcworkspacedata
ios/ShapeBeats.xcodeproj/: project.pbxproj
ios/ShapeBeats.xcworkspace/: contents.xcworkspacedata
ios/ShapeBeatsApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
src/components/: AdBanner.js  BpmEditorModal.js  ChannelSwitch.js  ChannelSwitch.tsx  ControlsButton.tsx  CurrentPack.js  CurrentPack.tsx  CustomSplashScreen.tsx  Metronome.js  (+14 more)
(+86 files in other folders)
